[project]
name = "riscv_formal"
version = "0.1.0"
description = "TODO"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "json-fix>=1.0.0",
    "verilog-vcd>=1.11",
    "yosys-mau",
]

[dependency-groups]
docs = [
    "Sphinx",
    "sphinx-toolbox",
    "furo-ys",
]

[project.scripts]
riscv_formal = "riscv_formal.__main__:main"

[build-system]
requires = ["setuptools>=80", "setuptools-scm[simple]>=8"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[tool.uv.sources]
yosys-mau = { git = "https://github.com/YosysHQ/mau.git" }
furo-ys = { git = "https://github.com/YosysHQ/furo-ys" }

[tool.ruff]
line-length = 100
